--- a/src/app/Components/Employee/list-employee/list-employee.component.css
+++ b/src/app/Components/Employee/list-employee/list-employee.component.css
@@ -48,3 +48,9 @@ input[type="reset"] {
     padding-top: 0.1rem;
     padding-bottom: 0.1rem;
 }
+
+@media screen and (max-width:320px) {
+    form {
+        flex-direction: column;
+    }
+}
