--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper" style="background-color: white;">
-    <div class="sidebar" data-color="purple" data-background-color="white" data-image="../assets/img/sidebar-1.jpg">
+    <div class="sidebar" data-color="purple" data-background-color="white">
         <div class="logo"><a class="simple-text logo-normal">
             Stock Management
         </a></div>
@@ -60,16 +60,17 @@
                 <div class="navbar-wrapper">
                     <a class="navbar-brand">{{currentEmployee.name}}</a>
                 </div>
+                <div class="justify-content-end">
+                    <a style="cursor: pointer; color:rgb(173, 5, 173) ;" (click)="logout()">Log out</a>
+                </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
             <span class="sr-only">Toggle navigation</span>
             <span class="navbar-toggler-icon icon-bar"></span>
             <span class="navbar-toggler-icon icon-bar"></span>
             <span class="navbar-toggler-icon icon-bar"></span>
           </button>
-                <div class="collapse navbar-collapse justify-content-end">
-                    <a style="cursor: pointer; color:rgb(173, 5, 173) ;" (click)="logout()">Log out</a>
-                </div>
             </div>
+
         </nav>
         <!-- End Navbar -->
         <div class="content">
