--- a/src/app/Components/Product/list-product/list-product.component.html
+++ b/src/app/Components/Product/list-product/list-product.component.html
@@ -28,7 +28,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let product of listProduct |filter :'name':filter | paginate: { itemsPerPage: 6, currentPage: p,totalItems: listProduct.length } " class="alert " role="alert ">
+                            <tr *ngFor="let product of listProduct |filter :'name':filter | paginate: { itemsPerPage: 6, currentPage: p,totalItems: listProduct?.length } " class="alert " role="alert ">
                                 <td>
                                     <img class="img " src="assets\ProductImageDefault\defaultProuctImage.png" [alt]="product.name">
                                 </td>
@@ -50,7 +50,7 @@
                                     <i style="cursor: pointer; " [routerLink]="[ 'product-details',product.id] " class="fa fa-info " aria-hidden="true "></i>
                                 </td>
                                 <td class="border-bottom-0">
-                                    <i (click)=" SupplyingProduct() " class="fa fa-plus fa-lg" style="cursor: pointer;"></i>
+                                    <i (click)=" SupplyingProduct(product.id)" class="fa fa-plus fa-lg" style="cursor: pointer;"></i>
                                 </td>
                             </tr>
                         </tbody>
@@ -64,17 +64,17 @@
 <div class="modal" *ngIf="Supplying">
     <div class="modal-content">
         <div class=" text-right">
-            <i (click)="SupplyingProduct()" style="cursor: pointer; " class="fa fa-times-circle fa-2x"></i></div>
+            <i (click)="SupplyingProduct(0)" style="cursor: pointer; " class="fa fa-times-circle fa-2x"></i></div>
         <div>
             <h5 class=" card-header text-center strong ">Fournir un Produit</h5>
             <div class="card-body text-center ">
                 <form action=" " [formGroup]='myForm'>
                     <div class="row">
                         <div class="form-group col-lg-6">
-                            <input type="text" formControlName="price" class="form-control " id="formGroupExampleInput" placeholder="Quantite">
+                            <input type="text" formControlName="Quantity" class="form-control" placeholder="Quantite">
                         </div>
                         <div class="form-group col-lg-6">
-                            <input type="text" formControlName="Quantity" class="form-control " id="formGroupExampleInput " placeholder="Prix">
+                            <input type="text" formControlName="price" class="form-control" placeholder="Prix">
                         </div>
                     </div>
                     <div class="form-group">
