--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -6,9 +6,9 @@
         <div class="sidebar-wrapper">
             <ul class="nav">
                 <li class="nav-item" routerLinkActive="active">
-                    <a class="nav-link">
+                    <a class="nav-link" routerLink="dashboard">
                         <i class="material-icons">dashboard</i>
-                        <p>Home</p>
+                        <p>dashboard</p>
                     </a>
                 </li>
                 <li class="nav-item" routerLinkActive="active">
