--- a/src/app/Components/dashboard/dashboard.component.css
+++ b/src/app/Components/dashboard/dashboard.component.css
@@ -1,126 +1,130 @@
-body {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-transform: capitalize;
-    height: 100vh;
-}
-
-h1 {
-    text-align: center;
-    font-size: 3rem;
-    background-color: aliceblue;
-    margin: 0;
-    padding: 1rem;
-}
-
-.country {
-    margin: 1rem;
-}
-
-.country select {
-    padding: 0.5rem 1rem;
-    min-width: 30%;
-    display: block;
-    margin: auto;
-    outline: none;
-}
-
-.container {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    flex-wrap: wrap;
-}
-
-.box {
-    color: white;
-    padding: 0.2rem;
-    width: 20%;
-    border-radius: 5px;
-    padding-left: 1rem;
-}
-
-.box p {
-    padding-left: 3rem;
-}
-
-.b3 {
-    background-color: crimson;
-}
-
-.b2 {
-    background-color: yellowgreen
-}
-
-.b1 {
-    background-color: rgb(121, 121, 247);
-}
-
-.b4 {
-    background-color: rgb(173, 109, 233);
-}
-
-h3 {
-    padding-left: 1rem;
-}
-
-.chart1 {
-    position: relative;
-    width: 40%;
-    height: 18rem;
-}
-
-.cchart {
-    margin-top: 3rem;
-}
-
-footer {
-    text-align: center;
-}
-
-.spinner {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 100;
-}
-
-.loader {
-    border: 10px solid #f5f5f5;
-    border-radius: 50%;
-    width: 4rem;
-    height: 4rem;
-    border-bottom: 10px solid #5f5ff0;
-    animation: anim 2s linear infinite;
-}
-
-@keyframes anim {
-    from {
-        transform: rotate(0deg);
+    body {
+        box-sizing: border-box;
+        padding: 0;
+        margin: 0;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        text-transform: capitalize;
+        height: 100vh;
     }
-    to {
-        transform: rotate(360deg);
+    
+    h1 {
+        text-align: center;
+        font-size: 3rem;
+        background-color: aliceblue;
+        margin: 0;
+        padding: 1rem;
     }
-}
-
-@media only screen and (max-width:780px) {
+    
+    .country {
+        margin: 1rem;
+    }
+    
+    .country select {
+        padding: 0.5rem 1rem;
+        min-width: 30%;
+        display: block;
+        margin: auto;
+        outline: none;
+    }
+    
     .container {
-        flex-direction: column;
-        padding: 0.4rem;
+        display: flex;
+        justify-content: space-evenly;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        flex-wrap: wrap;
     }
+    
     .box {
-        min-width: 98%;
-        padding: 0 0.3rem;
-        margin: 0.3rem 0;
+        color: white;
+        padding: 0.2rem;
+        width: 20%;
+        border-radius: 5px;
+        padding-left: 1rem;
     }
+    
+    .box p {
+        padding-left: 3rem;
+    }
+    
+    .b3 {
+        background-color: crimson;
+    }
+    
+    .b2 {
+        background-color: yellowgreen
+    }
+    
+    .b1 {
+        background-color: rgb(121, 121, 247);
+    }
+    
+    .b4 {
+        background-color: rgb(173, 109, 233);
+    }
+    
+    h3 {
+        padding-left: 1rem;
+    }
+    
     .chart1 {
-        width: 95%;
+        position: relative;
+        width: 40%;
+        height: 18rem;
     }
-}
+    
+    .cchart {
+        margin-top: 3rem;
+    }
+    
+    footer {
+        text-align: center;
+    }
+    
+    .spinner {
+        position: fixed;
+        width: 100vw;
+        height: 100vh;
+        background-color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 100;
+    }
+    
+    .loader {
+        border: 10px solid #f5f5f5;
+        border-radius: 50%;
+        width: 4rem;
+        height: 4rem;
+        border-bottom: 10px solid #5f5ff0;
+        animation: anim 2s linear infinite;
+    }
+    
+    @keyframes anim {
+        from {
+            transform: rotate(0deg);
+        }
+        to {
+            transform: rotate(360deg);
+        }
+    }
+    
+    .charts {
+        margin-top: 1rem;
+    }
+    
+    @media only screen and (max-width: 780px) {
+        .container {
+            flex-direction: column;
+            padding: 0.4rem;
+        }
+        .box {
+            min-width: 98%;
+            padding: 0 0.3rem;
+            margin: 0.3rem 0;
+        }
+        .chart1 {
+            width: 95%;
+        }
+    }
