--- a/src/app/Components/dashboard/dashboard.component.css
+++ b/src/app/Components/dashboard/dashboard.component.css
@@ -1,4 +1,4 @@
-    body {
+    /* body {
         box-sizing: border-box;
         padding: 0;
         margin: 0;
@@ -127,4 +127,4 @@
         .chart1 {
             width: 95%;
         }
-    }
+    } */
