--- a/src/app/Components/order/list-order/list-order.component.html
+++ b/src/app/Components/order/list-order/list-order.component.html
@@ -2,25 +2,17 @@
 
     <div class="row py-3 my-2">
         <div class="input-group no-border col-md-5">
-            <input type="text" class="form-control" placeholder="Search..." name="firstname" id="firstname"
-                [(ngModel)]="firstname" (ngModelChange)="Search()">
+            <input type="text" class="form-control" placeholder="Rechercher..." name="firstname" id="firstname" [(ngModel)]="firstname" (ngModelChange)="Search()">
         </div>
         <div class="col-md-3 mx-5"></div>
         <div class="pull-right col-md-2 ">
             <a routerLink="add" class=" btn btn-primary ">Nouvelle facture</a>
-
         </div>
-
     </div>
 
     <div class="row col-md-12">
         <div class="col-lg-4" *ngFor="let item of data | paginate: { itemsPerPage: 6, currentPage: p }">
             <div class="card card-margin">
-
-
-
-
-
                 <div class="card-header header">
                     <div class=" no-border">
                         <span class="card-title"> {{ item.customer.firstname }} {{ item.customer.lastname }}</span>
@@ -36,7 +28,7 @@
                     <div class="widget-49">
                         <div class="widget-49-title-wrapper mb-2">
                             <div class="widget-49-date-primary p-2 text-center">
-                                <span class="widget-49-date-day date">{{ item.orderDate | date }}</span>
+                                <span class="widget-49-date-day date">{{ item.orderDate | date:'dd-MM-yyyy' }}</span>
                             </div>
                             <div class="">
                                 <!-- <span class="widget-49-pro-title">7 produits</span> -->
@@ -46,15 +38,14 @@
                         </div>
 
                         <div class="widget-49-meeting-action ">
-                            <a routerLink="details/{{ item.id }}"
-                                class="btn btn-sm btn-flash-border-primary col-12">View All</a>
+                            <a routerLink="details/{{ item.id }}" class="btn btn-sm btn-flash-border-primary col-12">Affichee Tout</a>
                         </div>
                     </div>
                 </div>
             </div>
 
         </div>
-        <pagination-controls (pageChange)="p = $event"></pagination-controls>
+        <pagination-controls previousLabel=" " nextLabel='' (pageChange)="p = $event"></pagination-controls>
 
     </div>
 
