--- a/src/app/Components/Product/produt-details/produt-details.component.html
+++ b/src/app/Components/Product/produt-details/produt-details.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row p-2 bg-white border rounded">
-        <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="https://i.imgur.com/QpjAiHq.jpg"></div>
+        <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="https://www.eppendorf.com/fileadmin/General/MyEppendorf/Productregistration/Update_January_2021/Shop_ICON_Final.jpg"></div>
         <div class="col-md-6 mt-1">
             <h5>{{product?.name}}</h5>
             <hr>
@@ -28,18 +28,18 @@
             <tr>
                 <th scope="col ">#Id</th>
                 <th scope="col ">Nom et Prenom</th>
-                <th scope="col ">Price</th>
+                <th scope="col ">Prix</th>
                 <th scope="col ">Quantite</th>
-                <th scope="col ">Date operation </th>
+                <th scope="col ">Date d'operation </th>
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let Supplier of SupplierList; let i=i ndex ">
-                <th scope="row ">{{Supplier.id}}</th>
+            <tr *ngFor="let Supplier of SupplierList;">
+                <th scope=" row ">{{Supplier.id}}</th>
                 <td>{{Supplier.firstname + " "+ Supplier.lastname}}</td>
                 <td>{{Supplier.price}}</td>
                 <td>{{Supplier.quantity}}</td>
-                <td>{{Supplier.operation_date | date : "dd-MM-yyyy"}}</td>
+                <td>{{Supplier.operation_date | date : "dd-MM-yyyy "}}</td>
             </tr>
         </tbody>
     </table>
